# vayu-drishti

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: 🏠_Home.py
app/pages/: 1_🗺️_Heatmap.py  2_📈_Forecast.py  3_🔍_Attribution.py  4_📊_Benchmark.py  5_🗣️_Advisory.py  6_🤖_Agents.py
config/: settings.py
models/saved/: xgb_bengaluru_24h_meta.json  xgb_chennai_24h_meta.json  xgb_delhi_24h_meta.json  xgb_kolkata_24h_meta.json  xgb_lucknow_24h_meta.json  xgb_mumbai_24h_meta.json
scripts/: fetch_historical_data.py  fetch_satellite.py  generate_satellite_fallback.py  run_agents.py  test_fetch.py  train_all.py  train_model.py
src/advisory/: advisory_generator.py
src/agents/: pipeline.py  vayu_agents.py
src/attribution/: dispersion_model.py
src/data_ingestion/: aqi_api.py  land_use.py  weather_api.py
src/feature_engineering/: build_features.py
src/models/: train_forecaster.py
src/utils/: aqi_categories.py  geo_utils.py
